...
import { OnPageSelectedExample } from './OnPageSelectedExample';
import { ScrollablePagerViewExample } from './ScrollablePagerViewExample';
import { ScrollViewInsideExample } from './ScrollViewInsideExample';
import HeadphonesCarouselExample from './HeadphonesCarouselExample';
import PaginationDotsExample from './PaginationDotsExample';
const examples = [
    { component: BasicPagerViewExample, name: 'Basic Example' },
    { component: KeyboardExample, name: 'Keyboard Example' },
    { component: LazyPagerViewExample, name: 'Lazy Render Example' },
    { component: OnPageScrollExample, name: 'OnPageScroll Example' },
    { component: OnPageSelectedExample, name: 'OnPageSelected Example' },
    { component: HeadphonesCarouselExample, name: 'Headphones Carousel Example' },
    { component: PaginationDotsExample, name: 'Pagination Dots Example' },
...
